fix: changed responsive class for hero

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <!-- #endregion Encabezado -->
     <!-- #region Sección 1: Introducción -->
-    <div id="hero" class="section center-sm">
+    <div id="hero" class="section center-md">
       <h1>Entrega Semana 2</h1>
       <p>
         Este es un ejemplo de una página web, creada con HTML y CSS para la
